Add client image for testimonial section

--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
                 </div>
                 <p>"Samuel and his team made my green card process seamless. Their expertise and attention to detail were exceptional."</p>
                 <div class="client-info">
+                     <img src="https://via.placeholder.com/60x60/2563eb/ffffff?text=MC" alt="Client">
                    
                     <div>
                         <h4>Maria Chen</h4>
